added scss and breakpoints samples

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE HTML>
 <html>
-<link ref="stylesheet" src="style.css">
+<link rel="stylesheet" type="text/css" href="style.css"/>
 <body>
 <!-- content -->
-<menu>
+<nav>
     Fixed menu on top
-</menu>
+</nav>
 <main>
-
+    <section class="first">
+        First Section
+    </section>
+    <section class="second">
+        Second Section
+    </section>
+    <section class="third">
+        Third Section
+    </section>
 </main>
 <footer>
     Footer on bottom
